and font to project and images

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  google_fonts: ^5.1.0
   flutter:
     sdk: flutter
 
@@ -74,6 +75,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+    - family: Poppins
+      fonts:
+      - asset : assets/fonts/Poppins/Poppins-Regular.ttf
   # fonts:
   #   - family: Schyler
   #     fonts:
