--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^10.5.0
   dio: ^5.3.3
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
